--- a/webs/templates/webs/index.html
+++ b/webs/templates/webs/index.html
@@ -2,7 +2,10 @@
 
 {% load static %}
     <title>{% block title %}home page{% endblock title %}</title>
+{% block header %}
+ {% include 'header.html' %}
 
+{% endblock header %}
     <!-- font icons -->
 
 
@@ -33,20 +36,14 @@
     {% for post in posts %}
     <div class="gallary row">
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src='{{ post.image.url }}' height="282.917" width="282
-917" >
-            <a href="#" class="gallary-overlay">
+            <img src='{{ post.image.url }}' height="282.917" width="282.917" >
+            <a>{{ post.name }}</a>
+            <a href="{{ post.id }}" class="gallary-overlay">
+
                 <i class="gallary-icon ti-plus"></i>
             </a>
         </div>
     {%endfor  %}
-
-
-
-
-
-
-
 
 
 
